--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -10,9 +10,9 @@
   </li>
   <li>
   <a data-ng-click="setCurrency('mOK')" data-ng-class="{active: currency.symbol == 'mOK'}">mOK</a>
-  </li>
+  </li> 
   <li>
-  <a data-ng-click="setCurrency('bits')" data-ng-class="{active: currency.symbol == 'bits'}">bits</a>
+  <a data-ng-click="setCurrency('toshis')" data-ng-class="{active: currency.symbol == 'toshis'}">toshis</a>
   </li>
 </ul>
 
