--- a/public/views/status.html
+++ b/public/views/status.html
@@ -23,7 +23,7 @@
           </tr>
           <tr>
             <td translate>Current Sync Status</td>
-            <td class="text-right">
+            <td class="text-right"> 
             <span  data-ng-show="!sync.error">{{sync.status}}</span>
             <span class="text-danger" data-ng-show="sync.error">
               <span  class="glyphicon glyphicon-warning-sign"></span>
@@ -63,7 +63,7 @@
         <thead data-ng-include src="'views/includes/infoStatus.html'"></thead>
         <tbody>
           <tr>
-            <td translate>Last Block Hash (okcashd)</td>
+            <td translate>Last Block Hash (Okcashd)</td>
             <td class="text-right ellipsis"><a href="block/{{lastblockhash}}">{{lastblockhash}}</a></td>
           </tr>
           <tr>
